5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1832_1648.log
== TEST (2019-06-13 18:07:11) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
f = size(vi)*.70
for i in range(vi):
	if i < f:
		cont = cont + 1
z = zeros(vi, dtype=int)
for j in range(cont):
	cont[i] = z
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:07:36) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
f = size(vi)*.70
for i in range(vi):
	if i < f:
		cont = cont + 1
z = zeros(vi, dtype=int)
for j in range(cont):
	cont[i] = z
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:07:58) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
f = size(vi)*.70
for i in vi:
	if i < f:
		cont = cont + 1
z = zeros(vi, dtype=int)
for j in range(cont):
	cont[i] = z
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:08:25) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
f = size(vi)*.70
for i in vi:
	if i < f:
		cont = cont + 1
		print(cont)
z = zeros(vi, dtype=int)
for j in range(cont):
	cont[i] = z
	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:09:05) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
f = size(vi)*.70
for i in vi:
	if i < f:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
for j in range(cont):
	cont[i] = z
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:09:46) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
f = size(vi)*.70
for i in vi:
	if i < f:
		cont = cont + 1
print(cont)
z = zeros(vi, dtype=int)
for j in range(cont):
	cont[i] = z
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:10:47) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
f = size(vi)*.70
for i in vi:
	if i < f:
		cont = cont + 1
print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:12:48) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
f = vi*.70
for i in vi:
	cont = 0
	if i < f:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:14:24) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
f = vi*.70
cont = 0
for i in vi:
	if size(vi) < f:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:14:36) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
f = vi*.70
cont = 0
for i in vi:
	if size(vi) < f:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:18:44) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
f = vi*.70
cont = 0
for i in vi:
	j = 0
	if i < f[j]:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:19:10) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
f = vi*.70
cont = 0
for i in vi:
	j = 0
	if i < f[k]:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:19:29) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
f = vi*.70
cont = 0
for i in vi:
	k = 0
	if i < f[k]:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:20:32) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
f = vi*.70
cont = 0
for i in vi:
	k = 0
	if i < f[k]:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:20:51) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
f = vi*.70
cont = 0
for i in vi:
	k = 0
	if i < f[k]:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
contt = 0
j = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:22:29) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	k = 0
	if i < 70:
		cont = cont + 1
	print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:24:50) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(vi, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:25:22) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(size(cont), dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:26:31) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(size(cont), dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:27:09) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(size(cont), dtype=int)
contt = 0
for j in cont:
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:27:47) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(size(cont), dtype=int)
contt = 0
k = 0
for j in cont:
	contt[k] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:28:43) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in cont:
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:29:01) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:42:49) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z[i]
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:43:24) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z[i]
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:43:41) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z[i]
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:25) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z[j]
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:05) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(size(cont), dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z[j]
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:23) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(size(cont), dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z[i]
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:56) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z[i]
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:46:35) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z[j]
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:47:36) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
k = 0
for j in range(cont):
	contt[j] = z[k]
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:03) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:24) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if i < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(cont):
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:49) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
File "XXXX", line 12
    contt[j] = z
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:51) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
	contt[j] = z
	contt = contt + 1
print(contt)
-- ERROR:
File "XXXX", line 12
    contt[j] = z
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:55:14) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
		contt[j] = z
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:55:43) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
		contt[j] = z
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:56:47) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
		contt = z[cont]
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:57:00) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
		contt = z[cont]
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:57:16) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
		contt = z[i]
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:57:23) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
		contt = z[i]
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:58:11) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
		contt = z[i]
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:58:21) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[i] < 70:
		contt = z[i]
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:59:47) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[j] < 70:
		contt[j] = z
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:01:48) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:02:01) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:02:24) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in vi:
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in vi:
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:02:46) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in size(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in size(vi):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:03:28) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in range(vi):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(vi):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:04:08) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in range(size(vi)):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(size(vi):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(contt)
-- ERROR:
File "XXXX", line 10
    for j in range(size(vi):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:04:13) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in range(size(vi)):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(size(vi)):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:04:21) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in range(size(vi)):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(size(vi)):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(contt)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:04:34) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in range(size(vi)):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(size(vi)):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:04:44) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in range(size(vi)):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(size(vi)):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:05:06) 
-- CODE:
from numpy import*
vi = array(eval(input("digite as aulas frequentadas: ")))
cont = 0
for i in range(size(vi)):
	if vi[i] < 70:
		cont = cont + 1
print(cont)
z = zeros(cont, dtype=int)
contt = 0
for j in range(size(vi)):
	if vi[j] < 70:
		z[contt] = j
		contt = contt + 1
print(z)
-- EXECUTION TIME:
1.23128
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
3
[1 2 5]
---- user output:
3
[1 2 5]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
2
[1 2]
---- user output:
2
[1 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
